--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-age = { version = "0.10.0", features = ["armor"] }
+age = { version = "0.10.0", features = ["armor", "ssh", "cli-common", "plugin"] }
 clap = { version = "4.5.8", features = ["derive"] }
 clap-verbosity-flag = "2.2.0"
 confy = "0.6.1"
